<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/backFragmentLogin"
    tools:context=".ui.LoginFragment">

    <TextView
        style="@style/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleLoginFragment" />
    <LinearLayout
        style="@style/backEditLogin"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/ed_username"
            android:hint="@string/hintUsernameLogin"
            style="@style/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        style="@style/backEditLogin"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password" />
        <EditText
            android:id="@+id/ed_pass"
            android:hint="@string/hintPassLogin"
            style="@style/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtContactManager"
        style="@style/contactManagerLogin"
        android:text="@string/textContactManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/btnLogin"
        style="@style/backBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="@style/textBtnLogin"
            android:text="@string/textBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>