<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/backFragmentLogin"
        tools:context=".ui.activities.login.LoginActivity">

        <TextView
            style="@style/text_size_56sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleLoginFragment"
            android:layout_marginBottom="32dp"
            android:textColor="@color/white" />

        <LinearLayout
            style="@style/backEditLogin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="6dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/ed_username"
                android:hint="@string/hintUsernameLogin"
                style="@style/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            style="@style/backEditLogin"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_password" />

            <EditText
                android:id="@+id/ed_pass"
                android:hint="@string/hintPassLogin"
                style="@style/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtContactManager"
            style="@style/contactManagerLogin"
            android:text="@string/textContactManagement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnLogin"
            style="@style/backBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="12dp">

            <TextView
                style="@style/textBtnLogin"
                android:text="@string/textBtnLogin"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>