<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/styleItemHistory"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textNameTable"
                android:id="@+id/txtNameTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textNameTableItem" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clock" />

                <TextView
                    style="@style/textTimeTable"
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    />
            </LinearLayout>

            <TextView
                style="@style/textMountTableHistory"
                android:id="@+id/txtMount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quanityHistory" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/textTimeTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intoMoney" />

                <TextView
                    style="@style/textMoneyTable"
                    android:id="@+id/txtMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money"
                    />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_comment_duotone" />
    </FrameLayout>
</androidx.cardview.widget.CardView>