<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEEEEE"
    tools:context=".ui.manage.TableManageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/titleTable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/titleTableFragment" />

                        <TextView
                            style="@style/textTableToobar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textTableFlow" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/textTableToobar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textLiveTable" />

                            <TextView
                                style="@style/textTableToobar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textEmptyTable"
                                />
                        </LinearLayout>
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/imgAlert"
                        style="@style/imgIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_alert" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_height="wrap_content">
            <TextView
                style="@style/textTable"
                android:text="@string/textLiveTableNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLiveTable"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/item_table"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_height="wrap_content">
            <TextView
                style="@style/textTable"
                android:text="@string/textEmptyTableNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvEmptyTable"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:listitem="@layout/item_table"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>