<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/styleItemHistory"
    android:id="@+id/view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNameTable"
                    style="@style/textNameTableBill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textNameTableItem" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textTimeTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intoMoney" />

                    <TextView
                        android:id="@+id/txtMoney"
                        style="@style/textMoneyTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/txtTime"
                        style="@style/textTimeTable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="15:30 P.M" />
                </LinearLayout>
                <TextView
                    android:id="@+id/txtDate"
                    style="@style/textTimeTable"
                    android:layout_width="match_parent"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:text="8-9-2022" />
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/btnDone"
            style="@style/backBtnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                style="@style/textBtnLogin"
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.cardview.widget.CardView>