<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="tableDetailViewModel"
            type="com.poly.myapplication.ui.activities.table.TableDetailViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.table.TableDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_name_table"
                        style="@style/titleTableItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textNameTableItem" />

                    <ImageView
                        android:id="@+id/imgAdd"
                        style="@style/imgIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_add" />

                    <ImageView
                        android:id="@+id/imgBill"
                        style="@style/imgIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_bill" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/view_none_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/textTable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textAddFood"
                    android:layout_marginBottom="8dp"
                    />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:background="@drawable/bg_btn_add"
                    android:textColor="@color/white"
                    android:drawableRight="@drawable/ic_icon_add"
                    android:drawablePadding="-28dp"
                    />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_food"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</layout>