<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="foodViewModel"
            type="com.poly.restaurant.ui.activities.product.FoodViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.product.FoodActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.Toolbar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_bottom_sheet">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.SearchView
                                android:id="@+id/sv_food"
                                style="@style/editTextSearch"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:queryHint="@string/hintSearchFood" />

                            <com.google.android.material.tabs.TabLayout
                                android:id="@+id/tab_layout"
                                style="@style/text_in_tab_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:background="@color/color_bottom_sheet"
                                app:tabGravity="center"
                                app:tabMode="scrollable"
                                app:tabTextAppearance="@style/text_appearance_tab_layout" />
                        </LinearLayout>
                    </androidx.appcompat.widget.Toolbar>

                </com.google.android.material.appbar.AppBarLayout>

            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_bottom_sheet_order"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title_bottom_sheet"
                style="@style/text_size_22sp_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_product" />

            <RelativeLayout
                android:id="@+id/view_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_white_radius"
                android:paddingLeft="18dp"
                android:paddingTop="12dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp">

                <Button
                    android:id="@+id/btn_order"
                    style="@style/text_size_18sp_bold"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_btn_order"
                    android:text="@string/check_bill"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_total_dishes"
                    style="@style/text_size_18sp_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total: 3 dishes" />

                <TextView
                    android:id="@+id/tv_name_product"
                    style="@style/text_size_18sp_bold"
                    android:layout_width="220dp"
                    android:layout_below="@id/tv_total_dishes"
                    android:layout_marginTop="3dp"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="Capuchino, Latte, ..." />
            </RelativeLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>